reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__actions__defs__eat.rs_line_88_col_5.log

*** crates/tracewake-core/src/actions/defs/eat.rs:88:5: replace food_consumed_event -> EventEnvelope with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/actions/defs/eat.rs
+++ replace food_consumed_event -> EventEnvelope with Default::default()
@@ -80,50 +80,17 @@
 
 fn food_consumed_event(
     proposal: &Proposal,
     ordering_key: &OrderingKey,
     content_manifest_id: &ContentManifestId,
     food: &FoodSupplyState,
     servings_after: u32,
 ) -> EventEnvelope {
-    let actor_id = proposal.actor_id.as_ref().expect("actor checked");
-    let mut event = EventEnvelope::new_caused_v1(
-        EventId::new(format!(
-            "event.food_consumed.{}",
-            proposal.proposal_id.as_str()
-        ))
-        .unwrap(),
-        EventKind::FoodConsumed,
-        0,
-        0,
-        proposal.requested_tick,
-        ordering_key.clone(),
-        content_manifest_id.clone(),
-        vec![EventCause::Proposal(proposal.proposal_id.clone())],
-    )
-    .unwrap();
-    event.actor_id = Some(actor_id.clone());
-    event.proposal_id = Some(proposal.proposal_id.clone());
-    event.participants = vec![actor_id.to_string(), food.food_supply_id.to_string()];
-    event.payload = vec![
-        PayloadField::new("schema_version", EVENT_SCHEMA_V1),
-        PayloadField::new("actor_id", actor_id.as_str()),
-        PayloadField::new("food_supply_id", food.food_supply_id.as_str()),
-        PayloadField::new("servings_consumed", "1"),
-        PayloadField::new("servings_before", food.servings.to_string()),
-        PayloadField::new("servings_after", servings_after.to_string()),
-        PayloadField::new(
-            "hunger_delta",
-            (-food.hunger_reduction_per_serving).to_string(),
-        ),
-        PayloadField::new("location", location_payload(&food.location)),
-    ];
-    event.effects_summary = "food serving consumed".to_string();
-    event
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 fn eat_need_events(
     agent_state: &AgentState,
     proposal: &Proposal,
     ordering_key: &OrderingKey,
     content_manifest_id: &ContentManifestId,
     consumed_event: &EventEnvelope,


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/actions/defs/eat.rs` has changed (1781911461.015924087s, 3s after last build at 1781911458.095924121s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/actions/defs/eat.rs:88:5
    |
 88 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/actions/defs/eat.rs:88:5
    |
 88 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `envelope::EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
